# jetson-prom-exporter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  install.sh  pyproject.toml
grafana/: jetson-thor-hardware.json
src/jetson_prom_exporter/: __init__.py  __main__.py  collectors.py  exporter.py  jtop_mapper.py  nvidia_smi_parser.py
tests/: test_collectors_jtop.py  test_jtop_mapper.py
